# claude-voice-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agents_registry.py  assistant.py  hub.py  hub_events.py  inbox.py  nav.py  orb_render.py  overlay.py  platform_native.py  platform_overlay.py  pyproject.toml  say.py  stt.py  turn.py  wake.py
.claude/skills/voice-hub/: SKILL.md
.github/workflows/: ci.yml
docs/: design.md  lessons.md
docs/superpowers/specs/: 2026-07-19-duplex-channel-design.md
experiments/: README.md  constellation.py  neuron_render.py  orb_gpu.py
scripts/: mic_probe.py  smoke_parallel.py
tests/: test_ask.py  test_assistant.py  test_endpointer.py  test_hub_events.py  test_inbox.py  test_nav.py  test_platform_native.py  test_platform_overlay.py  test_say_backends.py  test_say_text.py  test_sound_events.py  test_stt.py  test_stt_device.py  test_stt_hostapi.py  test_turn.py  test_wake.py  wake_corpus.py
