[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-hub"
version = "0.1.0"
description = "Give your parallel Claude Code sessions a voice, a queue and a visible speaker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Dobarganes" }]
keywords = ["tts", "stt", "claude-code", "voice", "elevenlabs", "edge-tts"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
    "pydub",          # requires ffmpeg on PATH
    "Pillow",
    "edge-tts",
    "psutil",
]

[project.optional-dependencies]
# Session-jumping (nav.py) drives Windows Terminal through UI Automation.
windows = ["uiautomation; sys_platform == 'win32'"]
# The orb overlay draws into a Cocoa window (NSWindow + CALayer). Only the two
# frameworks actually imported, not the `pyobjc` metapackage, which pulls in
# roughly forty of them. The native voice and playback need nothing extra: they
# shell out to say(1) and afplay(1).
macos = [
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",   # AppKit, Foundation
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",  # CGImage, CALayer
]
# Local neural backends. Heavy downloads: kokoro ~350MB, f5-tts ~1.3GB.
local = ["kokoro", "f5-tts"]
# Second link of the fallback chain. Separate from `local` because it is the
# lightest offline backend and worth installing on its own.
supertonic = ["supertonic"]
# Offline transcription fallback for when ElevenLabs Scribe is unavailable.
stt = ["faster-whisper"]
# Only needed by experiments/orb_gpu.py.
gpu = ["torch"]
dev = ["pytest"]

# Flat layout: the project is a set of top-level modules, not a package.
# Declaring py-modules disables autodiscovery, so every module has to be listed:
# a missing name vanishes from the install and its imports fail. Under a modern
# setuptools editable install this is not even a "real install only" trap -- the
# strict finder only exposes the names listed here, so `import turn` breaks in
# CI the moment the module is added to the tree but not to this list.
[tool.setuptools]
py-modules = [
    "say",
    "hub",
    "hub_events",
    "stt",
    "nav",
    "overlay",
    "orb_render",
    "agents_registry",
    "platform_native",
    "platform_overlay",
    "assistant",
    "turn",
    "inbox",
    "wake",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
